--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "dev:general": "npm run db:deploy && npm run db:generate && next dev",
     "build": "DB_TYPE=pgsql npm run db:generate && DB_TYPE=pgsql npm run db:deploy && next build && npm run build:widget",
     "build:without-migrate": "npm run db:generate && next build && npm run build:widget",
-    "db:deploy": "prisma migrate deploy --schema ./prisma/$DB_TYPE/schema.prisma",
-    "db:generate": "prisma generate --schema ./prisma/$DB_TYPE/schema.prisma",
+    "db:deploy": "prisma migrate deploy --schema ./prisma/sqlite/schema.prisma",
+    "db:generate": "prisma generate --schema ./prisma/sqlite/schema.prisma",
     "db:push": "DB_TYPE=sqlite npm run db:push:general",
     "db:push:pg": "DB_TYPE=pgsql npm run db:push:general",
     "db:push:mysql": "DB_TYPE=mysql npm run db:push:general",
-    "db:push:general": "prisma db push --schema ./prisma/$DB_TYPE/schema.prisma --preview-feature",
-    "db:migrate": "prisma migrate dev --schema ./prisma/$DB_TYPE/schema.prisma",
+    "db:push:general": "prisma db push --schema ./prisma/sqlite/schema.prisma --preview-feature",
+    "db:migrate": "prisma migrate dev --schema ./prisma/sqlite/schema.prisma",
     "db:migrateAll": "prisma migrate dev --schema ./prisma/sqlite/schema.prisma && prisma migrate dev --schema ./prisma/pgsql/schema.prisma && prisma migrate dev --schema ./prisma/mysql/schema.prisma",
     "admin": "prisma studio",
     "widget": "vite --config scripts/vite.config.js",
@@ -56,7 +56,7 @@
     "next-auth": "3.29.10",
     "next-connect": "^0.10.1",
     "nodemailer": "^6.5.0",
-    "postcss": "^8.2.10",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.1.1",
