--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "cusdis",
   "scripts": {
-    "dev": "DB_TYPE=sqlite npm run dev:general",
+    "dev": "bash -c 'DB_TYPE=sqlite npm run dev:general'",
+    "dev:sqlite": "DB_TYPE=sqlite npm run dev:general",
     "dev:pg": "DB_TYPE=pgsql npm run dev:general",
     "dev:mysql": "DB_TYPE=mysql npm run dev:general",
     "dev:general": "npm run db:deploy && npm run db:generate && next dev",
     "build": "DB_TYPE=pgsql npm run db:generate && DB_TYPE=pgsql npm run db:deploy && next build && npm run build:widget",
     "build:without-migrate": "npm run db:generate && next build && npm run build:widget",
-    "db:deploy": "prisma migrate deploy --schema ./prisma/sqlite/schema.prisma",
-    "db:generate": "prisma generate --schema ./prisma/sqlite/schema.prisma",
+    "db:deploy": "prisma migrate deploy --schema ./prisma/$DB_TYPE/schema.prisma",
+    "db:generate": "prisma generate --schema ./prisma/$DB_TYPE/schema.prisma",
     "db:push": "DB_TYPE=sqlite npm run db:push:general",
     "db:push:pg": "DB_TYPE=pgsql npm run db:push:general",
     "db:push:mysql": "DB_TYPE=mysql npm run db:push:general",
-    "db:push:general": "prisma db push --schema ./prisma/sqlite/schema.prisma --preview-feature",
-    "db:migrate": "prisma migrate dev --schema ./prisma/sqlite/schema.prisma",
+    "db:push:general": "prisma db push --schema ./prisma/$DB_TYPE/schema.prisma --preview-feature",
+    "db:migrate": "prisma migrate dev --schema ./prisma/$DB_TYPE/schema.prisma",
     "db:migrateAll": "prisma migrate dev --schema ./prisma/sqlite/schema.prisma && prisma migrate dev --schema ./prisma/pgsql/schema.prisma && prisma migrate dev --schema ./prisma/mysql/schema.prisma",
     "admin": "prisma studio",
     "widget": "vite --config scripts/vite.config.js",
